# resume-roaster

./: .gitignore  BACKLOG.md  CLAUDE.md  PHASES.md  README.md  progress.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/ai/: __init__.py  client.py  critique.py
backend/app/parser/: __init__.py  assemble.py  bullets.py  entries.py  extract.py  fields.py  lines.py  sections.py
backend/app/routes/: analyze.py  parse.py
backend/app/schemas/: primitives.py  resume.py
backend/app/scoring/: __init__.py  bullets.py  completeness.py  tech_keywords.py
backend/tests/: conftest.py  test_bullets.py  test_e2e_smoke.py  test_entries.py  test_eval_metrics.py  test_extract.py  test_fields.py  test_lines.py  test_scoring.py  test_sections.py
docs/superpowers/plans/: 2026-06-28-phase4-deterministic-scoring.md
docs/superpowers/specs/: 2026-06-28-phase4-deterministic-scoring-design.md
eval/: README.md  REPORT.md  make_label_stub.py  make_synthetic.py  metrics.py  run_eval.py
eval/labels/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  _TEMPLATE.json
frontend/: next.config.mjs  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/debug/: page.tsx
frontend/src/components/: DebugOverlay.tsx  FeedbackCards.tsx  JsonViewer.tsx  ResumeUpload.tsx
frontend/src/lib/: api.ts
